--- a/auth.cabal
+++ b/auth.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b07e6ae285fea95b83bbe47910d3dc4b2e780623e095aff377b69ff3ef40bb1e
+-- hash: 495b0e6d18e19caf87e5f26b52240d075478928752ae6b8aba3477059dcc72ac
 
 name:           auth
 version:        0.0.0
@@ -11,6 +11,7 @@ homepage:       https://github.com/hrls/auth#readme
 author:         hrls
 maintainer:     viktor.kharitonovich@gmail.com
 copyright:      2018 hrls
+license-file:   LICENSE
 build-type:     Simple
 cabal-version:  >= 1.10
 
@@ -34,9 +35,9 @@ executable auth
     , scotty
     , stm
     , text
+    , transformers
     , warp
   other-modules:
-      Twitter.Api
-      Twitter.Auth
+      Twitter
       Paths_auth
   default-language: Haskell2010
